--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ MOODLE_DATABASE_PORT_NUMBER=48014
 MOODLE_DATABASE_NAME=railway
 MOODLE_DATABASE_USER=root
 MOODLE_DATABASE_PASSWORD=WXnHQtLLhrfFVcTmXzqkSJDeLSvbuTPP
+MOODLE_SKIP_INSTALL=no
