--- a/.env
+++ b/.env
@@ -1,18 +1,18 @@
 # rename to .env before pushing or deploying
-MOODLE_WWWROOT=https://theme.magicmoodle.com
+MOODLE_WWWROOT=https://magiclms.store
 
 # Database (Railway MySQL)
 MOODLE_DATABASE_TYPE=mysqli
-MOODLE_DATABASE_HOST=turntable.proxy.rlwy.net
-MOODLE_DATABASE_PORT_NUMBER=48014
-MOODLE_DATABASE_NAME=railway
-MOODLE_DATABASE_USER=root
-MOODLE_DATABASE_PASSWORD=WXnHQtLLhrfFVcTmXzqkSJDeLSvbuTPP
+MOODLE_DATABASE_HOST=db-magic-lms-magic-lms-db.h.aivencloud.com
+MOODLE_DATABASE_PORT_NUMBER=18229
+MOODLE_DATABASE_NAME=defaultdb
+MOODLE_DATABASE_USER=avnadmin
+MOODLE_DATABASE_PASSWORD=AVNS_Xk4G9bCLu42eO4Q6wpD
 
 # Admin user (you can change these)
 MOODLE_USERNAME=admin
 MOODLE_PASSWORD=Admin123!
-MOODLE_EMAIL=admin@example.com
+MOODLE_EMAIL=admin@magic.com
 
 # Site name
-MOODLE_SITE_NAME="Magic Moodle"
+MOODLE_SITE_NAME="Magic LMS"
