--- a/.env.template
+++ b/.env.template
@@ -3,11 +3,11 @@ MOODLE_WWWROOT=https://magiclms.store
 
 # Database (Railway MySQL)
 MOODLE_DATABASE_TYPE=mysqli
-MOODLE_DATABASE_HOST=db-magic-lms-magic-lms-db.h.aivencloud.com
+MOODLE_DATABASE_HOST=db-magic-lms-magic-lms-db.f.aivencloud.com
 MOODLE_DATABASE_PORT_NUMBER=18229
 MOODLE_DATABASE_NAME=defaultdb
 MOODLE_DATABASE_USER=avnadmin
-MOODLE_DATABASE_PASSWORD=AVNS_Xk4G9bCLu42eO4Q6wpD
+MOODLE_DATABASE_PASSWORD=AVNS_KJ6qjQ1BoNfFDyVUtxc
 
 # Admin user (you can change these)
 MOODLE_USERNAME=admin
