--- a/.env.template
+++ b/.env.template
@@ -2,12 +2,12 @@
 MOODLE_WWWROOT=https://magiclms.store
 
 # Database (Railway MySQL)
-MOODLE_DATABASE_TYPE=mysqli
-MOODLE_DATABASE_HOST=db-magic-lms-magic-lms-db.f.aivencloud.com
-MOODLE_DATABASE_PORT_NUMBER=18229
-MOODLE_DATABASE_NAME=defaultdb
-MOODLE_DATABASE_USER=avnadmin
-MOODLE_DATABASE_PASSWORD=AVNS_KJ6qjQ1BoNfFDyVUtxc
+MOODLE_DATABASE_TYPE=mariadb
+MOODLE_DATABASE_HOST=sql202.infinityfree.com
+MOODLE_DATABASE_PORT_NUMBER=3306
+MOODLE_DATABASE_NAME=if0_39674470_magiclms
+MOODLE_DATABASE_USER=if0_39674470
+MOODLE_DATABASE_PASSWORD=dE8eEw2CCRS
 
 # Admin user (you can change these)
 MOODLE_USERNAME=admin
