--- a/.env.template
+++ b/.env.template
@@ -1,18 +1,11 @@
-# rename to .env before pushing or deploying
-MOODLE_WWWROOT=https://magiclms.store
-
-# Database (Railway MySQL)
-MOODLE_DATABASE_TYPE=mariadb
-MOODLE_DATABASE_HOST=sql202.infinityfree.com
-MOODLE_DATABASE_PORT_NUMBER=3306
-MOODLE_DATABASE_NAME=if0_39674470_magiclms
-MOODLE_DATABASE_USER=if0_39674470
-MOODLE_DATABASE_PASSWORD=dE8eEw2CCRS
-
-# Admin user (you can change these)
-MOODLE_USERNAME=admin
-MOODLE_PASSWORD=Admin123!
-MOODLE_EMAIL=admin@magic.com
-
-# Site name
+MOODLE_WWWROOT="https://magiclms.store"
+MOODLE_DATABASE_TYPE="mariadb"
+MOODLE_DATABASE_HOST="mysql.railway.internal"
+MOODLE_DATABASE_PORT_NUMBER="3306"
+MOODLE_DATABASE_NAME="railway"
+MOODLE_DATABASE_USER="root"
+MOODLE_DATABASE_PASSWORD="iGUsUqcDoguquOxpoRXXRsIpogldBUlT"
+MOODLE_USERNAME="admin"
+MOODLE_PASSWORD="Admin123!"
+MOODLE_EMAIL="admin@magic.com"
 MOODLE_SITE_NAME="Magic LMS"
